tests/cli/manage/snapshots/cli__manage__unmanage_cleanup.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-cleanup is now unmanaged by GHerrit.
