tests/cli/manage/snapshots/cli__manage__unmanage_preserve_drift.snap
---
source: tests/cli/manage/mod.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] [WARN] Configuration drift detected for branch feature-cleanup.
[gherrit] [WARN] The current git configuration does not match the expected state for a private branch.
[gherrit] [WARN]   - pushRemote: current='drifted-remote', expected='.'
[gherrit] [WARN] Use --force to overwrite manual changes.
